# gtk-reporter

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: error.rs  main.rs  state.rs  ui.rs
wix/: main.wxs
